--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,120 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00FFFFFF"
     android:gravity="center_horizontal|center_vertical">
 
-    <LinearLayout
-        android:id="@+id/opts_layout"
+
+    <RadioGroup
+        android:id="@+id/orderGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clipChildren="false"
-        android:clipToOutline="false"
-        android:clipToPadding="false"
-        android:gravity="left|center_vertical"
-        android:orientation="vertical">
+        android:layout_marginTop="42dp"
+        android:background="@drawable/border"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/timeValue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <RadioGroup
-            android:id="@+id/orderGroup"
-            android:layout_width="wrap_content"
+        <RadioButton
+            android:id="@+id/orderSeq"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/border"
-            android:orientation="vertical">
+            android:paddingLeft="10sp"
+            android:paddingTop="10sp"
+            android:paddingRight="10sp"
+            android:paddingBottom="10sp"
+            android:text="@string/orderseq"
+            android:textSize="24sp" />
 
-            <RadioButton
-                android:id="@+id/orderSeq"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10sp"
-                android:paddingTop="10sp"
-                android:paddingRight="10sp"
-                android:paddingBottom="10sp"
-                android:text="@string/orderseq"
-                android:textSize="24sp" />
-
-            <RadioButton
-                android:id="@+id/orderRand"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10sp"
-                android:paddingTop="10sp"
-                android:paddingRight="10sp"
-                android:paddingBottom="10sp"
-                android:text="@string/orderand"
-                android:textSize="24sp" />
-
-        </RadioGroup>
-
-        <LinearLayout
+        <RadioButton
+            android:id="@+id/orderRand"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipChildren="false"
-            android:clipToOutline="false"
-            android:clipToPadding="false"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:paddingLeft="10sp"
+            android:paddingTop="10sp"
+            android:paddingRight="10sp"
+            android:paddingBottom="10sp"
+            android:text="@string/orderand"
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/timeValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10sp"
-                android:paddingTop="10sp"
-                android:paddingRight="10sp"
-                android:paddingBottom="10sp"
-                android:text="TextView"
-                android:textSize="18sp" />
+    </RadioGroup>
 
-            <SeekBar
-                android:id="@+id/timelimitBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="179dp"
-                android:layout_height="wrap_content"
-                android:indeterminate="false"
-                android:max="4"
-                android:progress="1" />
 
-            <TextView
-                android:id="@+id/timelimitlabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:paddingLeft="10sp"
-                android:paddingTop="10sp"
-                android:paddingRight="10sp"
-                android:paddingBottom="10sp"
-                android:text="@string/timelimit"
-                android:textSize="24sp" />
+    <TextView
+        android:id="@+id/timeValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10sp"
+        android:paddingTop="10sp"
+        android:paddingRight="10sp"
+        android:paddingBottom="10sp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/timelimitBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orderGroup" />
 
-            <Spinner
-                android:id="@+id/langcombo"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                 />
-        </LinearLayout>
+    <SeekBar
+        android:id="@+id/timelimitBar"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:max="4"
+        android:progress="1"
+        app:layout_constraintBottom_toTopOf="@+id/timelimitlabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeValue" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/timelimitlabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:paddingLeft="10sp"
+        android:paddingTop="10sp"
+        android:paddingRight="10sp"
+        android:paddingBottom="10sp"
+        android:text="@string/timelimit"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/langcombo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timelimitBar" />
 
-            <Button
-                android:id="@+id/startButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onBegin"
-                android:paddingLeft="10sp"
-                android:paddingTop="10sp"
-                android:paddingRight="10sp"
-                android:paddingBottom="10sp"
-                android:text="@string/begin"
-                android:textSize="24sp" />
-        </LinearLayout>
+    <Spinner
+        android:id="@+id/langcombo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timelimitlabel" />
 
-    </LinearLayout>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="41dp"
+        android:onClick="onBegin"
+        android:paddingLeft="10sp"
+        android:paddingTop="10sp"
+        android:paddingRight="10sp"
+        android:paddingBottom="10sp"
+        android:text="@string/begin"
+        android:textColor="@color/buttontxt"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/langcombo" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
