--- a/app/src/main/res/layout/comboview.xml
+++ b/app/src/main/res/layout/comboview.xml
@@ -8,6 +8,6 @@
     android:paddingTop="10sp"
     android:paddingRight="10sp"
     android:paddingBottom="10sp"
-    android:textSize="24sp">
+    android:textSize="@dimen/text24">
 
 </TextView>
